работа с главной заголовкой и якорями

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <div class="header-top">
             <div class="container">
                 <ul class="contact-list">
-                    <li>
-                       
+                    <li>                       
                         <a href="#">г. Новосибирск, ул. Пасечная, 14/1 «НОРДМОЛЛ»</a>
                     </li>
                     <li>
@@ -40,7 +39,7 @@
                         </a>
                     </li>
                 </ul>
-                <button>
+                <button class="mobile-btn">
                     <a href="#form">Заказать обратный звонок</a>
                 </button>
             </div>
@@ -68,14 +67,15 @@
     </header>
     <main>
         <div class="promo" style="background-image: url('./assets/imgs/fon.jpg');">
-                <div class="ttl-bg" style="background-image: url('./assets/imgs/ttl-bg.png');"></div>
-                <div class="container">
-                    <h1>Технология бесшовной тепло- звукоизоляции</h1>
+                <div class="ttl-bg" style="background-image: url('./assets/imgs/bg.png');">
+                    <div class="container">
+                        <h1>Технология бесшовной тепло- звукоизоляции</h1>
+                    </div>
                 </div>
         </div>
-        <section class="about"  style="background-image: url('./assets/imgs/section-bg.jpg');">
+        <section class="about" id="about" style="background-image: url('./assets/imgs/section-bg.jpg');">
             <div class="container">
-                <h6 id="about">О продукте</h6>
+                <h6>О продукте</h6>
                 <h2>При всем многообразии тепло- и шумо-изоляционных материалов, каждый должен соответствовать <b>основным критериям:</b></h2>
                 <div class="about-items">
                     <div class="about-item">
@@ -132,12 +132,12 @@
                 </p>
             </div>
         </section>
-        <section class="advantages" >
+        <section class="advantages" id="advantages">
              <div class="container">
                 <h2><b>Представляем инновационную систему ThermoWhite</b></h2>
                 <p>ThermoWhite - это тепло — звукоизоляционная система, полностью сертифицированная в РФ для использования при строительстве частных и многоквартирных домов, общественных зданий и нежилых объектов любого назначения.</p>
 
-                <h6 id="advantages">Преимущества</h6>
+                <h6 >Преимущества</h6>
                 <h2>Преимущества системы <b>ThermoWhite</b></h2>
 
                 <div class="advantages-items">
@@ -289,9 +289,9 @@
                 </div>
             </div>
         </section>
-        <section class="applications" >
+        <section class="applications" id="applications">
             <div class="container">
-                <h6 id="applications">Спектр применения</h6>
+                <h6 >Спектр применения</h6>
                 <h2>Области применения теплоизоляции <b>ThermoWhite</b></h2>
                 <div class="swiper">
                     <div class="swiper-wrapper">
@@ -347,9 +347,9 @@
                 </div>
             </div>
         </section>
-        <section class="gallery"  style="background-image:url('./assets/imgs/section-bg.jpg');">
+        <section class="gallery" id="gallery"  style="background-image:url('./assets/imgs/section-bg.jpg');">
             <div class="container">
-                <h6 id="gallery">Примеры работ</h6>
+                <h6 >Примеры работ</h6>
                 <h2>Фотогалерея <b>ThermoWhite</b></h2>
                 <div class="gallery-tabs">
                     <div class="gallery-tabs__nav">
@@ -436,9 +436,9 @@
                 </form>
             </div>
         </section>
-        <section class="certificates" >
+        <section class="certificates" id="certificates">
             <div class="container">
-                <h6 id="certificates">Доп. информация</h6>
+                <h6 >Доп. информация</h6>
                 <h2><b>Сертификаты и тех.данные</b></h2>
                 <div class="certificates-items">
                     <div class="certificate-item">
